--- a/Solved_HW15_Vizual.ipynb
+++ b/Solved_HW15_Vizual.ipynb
@@ -951,7 +951,8 @@
     }
    ],
    "source": [
-    "# соотношение набранных очков и совершенных бросков\n",
+    "# переменные: PTS - набранные очки, FGA - выполенено бросков.\n",
+    "# В графике приведено соотношение набранных очков и совершенных бросков.\n",
     "# после получения травмы в 2014 соотношение ухудшилось (приблизительно 1 очко на один бросок)\n",
     "Kobe_points = kobe[['Year', 'PTS', 'FGA']].plot(kind='bar', x='Year', figsize=(20, 4), title='соотношение набранных очков и выполненных бросков Kobe Bryant')"
    ]
@@ -982,7 +983,8 @@
     }
    ],
    "source": [
-    "# процент попадания\n",
+    "# переменные: FG% - % попадания.\n",
+    "# на линейчатом графике отчетлива видна динамика изменения % точности.\n",
     "Kobe_points2 = kobe[['Year','FG%']].plot(x='Year', figsize=(20, 4), grid=True, title='% точности Kobe Bryant')\n",
     "# если добавить атрибут kind='area', то изменяется начальная точка оси У на о. Как настроить ось?"
    ]
@@ -1021,6 +1023,12 @@
     }
    ],
    "source": [
+    "#переменные: 2P - кол-во точных 2 оч. бросков, 3P - кол-во точных 3 оч. бросков, FT - кол-во точных штрафных, \n",
+    "#TRB - подборы, AST - передачи, STL - перехваты, BLK - блокшоты\n",
+    "\n",
+    "# график отображает игровые особенности игрока: атакующие - много 2 оч.бросков и штрафных, 3 оч.бросков значительно меньше\n",
+    "# активность на подборах и передачи также сильно развита. \n",
+    "\n",
     "Kobe_skills = kobe[['2P', '3P', 'FT', 'TRB', 'AST', 'STL', 'BLK']].sum()\n",
     "Kobe_skills.reset_index()\n",
     "#Kobe_skills.stack().reset_index()\n",
@@ -1255,6 +1263,9 @@
     "#3.сортировка\n",
     "#4.стилизация таблицы - спарклайн\n",
     "\n",
+    "#датафрейм отсортирован по количеству набранных очков (PTS), но количество сезонов, которое понадобилось для набора очков различно,\n",
+    "# т.е. если смотреть в среднем за сезон, то ТОП-15 будет выглядить иначе\n",
+    "\n",
     "top_15_players = players_season[['Player', 'Year', 'PTS', '2P', '3P', 'FT']].groupby('Player')\\\n",
     "    .agg({'Year': 'count', 'PTS': 'sum', '2P': 'sum', '3P': 'sum', 'FT': 'sum'})\\\n",
     "        .sort_values('PTS', ascending=False).reset_index().head(15)\\\n",
@@ -1289,6 +1300,8 @@
    ],
    "source": [
     "# набор бросков топ 15 играков по количеству точных бросков\n",
+    "#на графике можно увидеть насколько игрок разносторонне развит в напададении и его активность (количество штрафных (FT))\n",
+    "\n",
     "top_15_players2 = players_season[['Player', '2P', '3P', 'FT']].groupby('Player')\\\n",
     "    .sum().sort_values('2P', ascending=False).reset_index().head(15)\\\n",
     "            .plot(kind='bar', rot=45, stacked=True, x='Player', figsize=(20, 4), title='Атакующие навыки ТОП-15 играков по набранным очкам')"
@@ -1411,6 +1424,8 @@
    ],
    "source": [
     "#Распределение игроков по продолжительсти игры\n",
+    "# гисограмма показывает, что большая часть игроков проводит всего несколько сезонов, от 5 до 12 сезонов колебания незначительные\n",
+    "\n",
     "players_years.hist(figsize=(20, 4), bins=30)\n",
     "\n",
     "# не соображу как по оси Y расположить лет игры, по X кол-во игроков, настроить плотность подписей оси"
@@ -1537,7 +1552,7 @@
     }
    ],
    "source": [
-    "#распределение количества очков по возрастам играков. Самый результативный возраст 22-27 лет\n",
+    "#график показывает распределение количества очков по возрастам играков. Самый результативный возраст 22-27 лет\n",
     "\n",
     "sns.scatterplot(x='Age', y='PTS',data=players_position)"
    ]
